--- a/index.html
+++ b/index.html
@@ -3,11 +3,85 @@
 <head>
   <meta charset="UTF-8">
   <title>AI Stock Market Advisor</title>
-  <!-- Base and luxurious styling -->
+  <!-- Base style sheet (optional, for your extra CSS) -->
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="background.css">
-  <!-- Elegant fonts for luxury look -->
+  <!-- Luxurious background styles -->
+  <style>
+    body {
+      background: linear-gradient(120deg, #22543d 55%, #7ed957 100%);
+      min-height: 100vh;
+      margin: 0;
+      color: #eaeaea;
+      font-family: 'Montserrat', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
+    }
+    .lux-bg {
+      background: rgba(40, 60, 32, 0.97);
+      border-radius: 18px;
+      box-shadow: 0 6px 36px rgba(34, 84, 61, 0.18);
+      border: 2px solid #aad17e;
+      padding: 32px;
+      margin: 50px auto;
+      max-width: 560px;
+    }
+    h1, h3 {
+      font-family: 'Playfair Display', 'Montserrat', serif;
+      color: #7ed957;
+    }
+    .card {
+      background: #224d35;
+      color: #bffe9b;
+      border-radius: 16px;
+      box-shadow: 0 2px 18px rgba(84, 255, 134, 0.10);
+      border: 1px solid #7ed957;
+      padding: 24px;
+      margin-top: 30px;
+    }
+    .chart-container {
+      background: rgba(41, 61, 46, 0.92);
+      border-radius: 14px;
+      border: 1.5px solid #7ed957;
+      padding: 18px;
+      margin-top: 24px;
+    }
+    input[type="text"], input[type="number"] {
+      background: #224d35;
+      color: #7ed957;
+      border: 1px solid #7ed957;
+      border-radius: 8px;
+      padding: 10px;
+      font-size: 1em;
+      margin-bottom: 12px;
+      width: 80%;
+      margin-top: 16px;
+    }
+    button {
+      background: linear-gradient(90deg, #7ed957 0%, #43a047 100%);
+      color: #19381f;
+      border: none;
+      padding: 14px 32px;
+      font-weight: 600;
+      border-radius: 10px;
+      font-size: 1.1em;
+      box-shadow: 0 3px 14px rgba(34, 84, 61, 0.20);
+      cursor: pointer;
+      margin-bottom: 16px;
+      transition: background 0.3s, color 0.3s;
+    }
+    button:hover {
+      background: linear-gradient(90deg, #43a047 0%, #7ed957 100%);
+      color: #7ed957;
+    }
+    @media (max-width: 700px) {
+      .lux-bg {
+        padding: 12px;
+        margin: 10px;
+        max-width: 98vw;
+      }
+    }
+  </style>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+  <!-- Chart.js CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
   <div class="lux-bg">
@@ -15,17 +89,54 @@
     <input type="text" id="investment" placeholder="Enter amount">
     <button onclick="calculate()">Calculate</button>
     <div class="card" id="result">
-      <!-- Example result. Will be updated by JS. -->
       <h3>Best Stock to Invest</h3>
       <p><strong>Infosys</strong> is the best choice.</p>
       <p>Expected Profit: ₹10.26</p>
       <p>Predicted Growth: 0.83%</p>
     </div>
-    <div class="chart-container" id="chart">
-      <!-- Example chart. Replace with actual dynamic chart if needed. -->
-      <img src="https://via.placeholder.com/400x200?text=Infosys+Last+7+Days" alt="Infosys Last 7 Days" style="width:100%;border-radius:8px;">
+    <div class="chart-container">
+      <canvas id="myChart" width="400" height="200"></canvas>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script>
+    // Example: Render a bar chart on page load
+    window.onload = function () {
+      var ctx = document.getElementById('myChart').getContext('2d');
+      new Chart(ctx, {
+        type: 'bar', // Change to 'line' for a line chart
+        data: {
+          labels: ['Day 1', 'Day 2', 'Day 3', 'Day 4', 'Day 5', 'Day 6', 'Day 7'],
+          datasets: [{
+            label: 'Infosys Last 7 Days',
+            data: [1410, 1420, 1430, 1440, 1450, 1460, 1480],
+            backgroundColor: '#7ed957'
+          }]
+        },
+        options: {
+          responsive: false,
+          plugins: {
+            legend: { display: true }
+          },
+          scales: {
+            x: {
+              grid: {
+                color: '#224d35'
+              }
+            },
+            y: {
+              grid: {
+                color: '#224d35'
+              }
+            }
+          }
+        }
+      });
+    };
+    // Placeholder for your calculate function
+    function calculate() {
+      // You can implement your logic here if needed
+      alert('Calculation function is a placeholder.');
+    }
+  </script>
 </body>
 </html>
